# gpx-poi-enricher

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  add-campsites-to-gpx.py  add-pois-to-gpx.py  add-split-waypoints.py  add_campsites_to_gpx.py  add_pois_to_gpx.py  dev.md  make-pois-gpx.py  pyproject.toml
.github/workflows/: ci.yml
android/: .gitignore  build-apk.sh  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/profiles/: aquarium.json  attractions.json  beach.json  camping.json  kids_activities.json  mcdonalds.json  outdoor_pool.json  playground.json  restaurant.json  theme_park.json  zoo.json
android/app/src/main/java/com/gpxpoienricher/: GpxApp.kt  MainActivity.kt  PythonBridge.kt
android/app/src/main/java/com/gpxpoienricher/core/: Enricher.kt  GpxParser.kt  GpxWriter.kt  MapsToGpx.kt  ProfileLoader.kt  Splitter.kt  TrackUtils.kt
android/app/src/main/python/: gpx_bridge.py
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_map.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_easy.xml  fragment_enricher.xml  fragment_maps_to_gpx.xml  fragment_split.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/: libs.versions.toml
profiles/: aquarium.yaml  attractions.yaml  beach.yaml  camping.yaml  kids_activities.yaml  mcdonalds.yaml  outdoor_pool.yaml  playground.yaml  restaurant.yaml  theme_park.yaml  zoo.yaml
scripts/: setup-pre-commit.sh
src/gpx_poi_enricher/: __init__.py  cli.py  enricher.py  geocoding.py  gpx_utils.py  gui.py  maps_to_gpx_cli.py  overpass.py  profiles.py  progress.py  split_cli.py
tests/: conftest.py  test_enricher.py  test_geocoding.py  test_gpx_utils.py  test_maps_to_gpx_cli.py  test_overpass.py  test_profiles.py
tests/fixtures/: sample_track.gpx
(+15 files in other folders)
